<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameScreen">

    <TextView
        android:id="@+id/tricksTakenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/archivo_black"
        android:text="Tricks Taken:"
        android:textColor="#FB0000"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/T1Score"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toEndOf="@+id/imageButtonOF"
        app:layout_constraintTop_toBottomOf="@+id/ScoreBoard" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="413dp"
        android:layout_height="315dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/red" />

    <Button
        android:id="@+id/trumpDiamondsButton"
        android:layout_width="75dp"
        android:layout_height="47dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="55dp"
        android:text="Diamonds"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/trumpClubsButton"
        android:layout_width="75dp"
        android:layout_height="47dp"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="55dp"
        android:text="clubs"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/trumpSpadesButton"
        android:layout_width="75dp"
        android:layout_height="47dp"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="16dp"
        android:text="spades"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/trumpHeartsButton"
        android:layout_width="75dp"
        android:layout_height="47dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:text="Hearts"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="start"
        android:text="Deal"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonOR"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonOL"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonOF" />

    <Button
        android:id="@+id/trumpPassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pass"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <ImageButton
        android:id="@+id/imageButtonTL"
        android:layout_width="99dp"
        android:layout_height="157dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735"
        app:srcCompat="@drawable/cardback" />

    <ImageButton
        android:id="@+id/imageButtonBR"
        android:layout_width="99dp"
        android:layout_height="157dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/cardback" />

    <ImageButton
        android:id="@+id/imageButtonBL"
        android:layout_width="99dp"
        android:layout_height="157dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/cardback" />

    <ImageButton
        android:id="@+id/imageButtonTR"
        android:layout_width="99dp"
        android:layout_height="156dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737"
        app:srcCompat="@drawable/cardback" />

    <ImageButton
        android:id="@+id/imageButtonOL"
        android:layout_width="99dp"
        android:layout_height="156dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonOF"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233"
        app:srcCompat="@drawable/cardback" />

    <ImageButton
        android:id="@+id/imageButtonCC"
        android:layout_width="99dp"
        android:layout_height="156dp"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonOR"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonOL"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonOF"
        app:srcCompat="@drawable/cardback" />

    <ImageButton
        android:id="@+id/imageButtonOR"
        android:layout_width="99dp"
        android:layout_height="156dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233"
        app:srcCompat="@drawable/cardback" />

    <ImageButton
        android:id="@+id/imageButtonOF"
        android:layout_width="99dp"
        android:layout_height="156dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cardback" />

    <ImageButton
        android:id="@+id/imageButtonTC"
        android:layout_width="99dp"
        android:layout_height="157dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736"
        app:srcCompat="@drawable/cardback"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/titleSubtext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:fontFamily="@font/archivo_black"
        android:text="Trump"
        android:textAllCaps="false"
        android:textColor="#FB0000"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/T1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/archivo_black"
        android:text="Your Team:"
        android:textColor="#FB0000"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/T1Score"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonOF"
        app:layout_constraintTop_toBottomOf="@+id/ScoreBoard" />

    <TextView
        android:id="@+id/T2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/archivo_black"
        android:text="Other Team:"
        android:textColor="#FB0000"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/T2Score"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonOF"
        app:layout_constraintTop_toBottomOf="@+id/T1" />

    <TextView
        android:id="@+id/T1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/archivo_black"
        android:numeric="integer"
        android:text="0"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/T1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/T2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/archivo_black"
        android:numeric="integer"
        android:text="0"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/T2"
        app:layout_constraintTop_toBottomOf="@+id/T1Score" />

    <TextView
        android:id="@+id/tricksTakenCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/archivo_black"
        android:text="0 - 0"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/T2"
        app:layout_constraintTop_toBottomOf="@+id/T1Score" />

    <TextView
        android:id="@+id/ScoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/archivo_black"
        android:text="Score"
        android:textColor="#FB0000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonOF"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/archivo_black"
        android:text="Score"
        android:textColor="#FB0000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonOF"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="27dp"
        android:text="       "
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>