...
        android:layout_marginLeft="151dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:layout_marginBottom="395dp"
        android:onClick="gameActivity"
        android:text="start game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
...
